# sf-mcp

./: .cursorrules  .gitignore  DEVELOPMENT.md  Makefile  README.md  demo.py  demo_rate_limiting.py  env.example  mcp-config.json  pyproject.toml  pytest.ini  requirements.txt
starfish_mcp/: __init__.py  client.py  config.py  models.py  prompt.py  rate_limiter.py  server.py  tools.py  tools.py.backup
starfish_mcp/tools/: __init__.py  management.py  query_builder.py  schema.py  starfish_query.py
tests/: __init__.py  conftest.py  test_client.py  test_config.py  test_integration.py  test_integration_comprehensive.py  test_models.py  test_query_builder.py  test_rate_limiter.py  test_tools.py  test_tools_modular.py  test_tools_updated.py
